# sosFiles

./: CMakeLists.txt  README.md
src/: main.cpp
src/directoryBrowser/: directoryBrowser.cpp  directoryBrowser.h
src/mainWindow/: mainWindow.cpp  mainWindow.h
